--- a/src/style.scss
+++ b/src/style.scss
@@ -30,10 +30,12 @@ textarea::-moz-focus-inner {
   border: 0;
 }
 .leaflet-control.leaflet-searchbox-control-wrapper{
+    pointer-events: none;
     margin-left:0;
     margin-top:0;
 }
 .leaflet-searchbox-control {
+  pointer-events: auto;
   position: absolute;
   left: 0px;
   margin: 16px;
@@ -147,6 +149,7 @@ textarea::-moz-focus-inner {
   }
 
   &-panel {
+    pointer-events: auto;
     width: 300px;
     float: left;
     height: 550px;
