--- a/src/style.scss
+++ b/src/style.scss
@@ -29,10 +29,10 @@ textarea::-moz-focus-inner {
   padding: 0;
   border: 0;
 }
-.leaflet-control.leaflet-searchbox-control-wrapper{
-    pointer-events: none;
-    margin-left:0;
-    margin-top:0;
+.leaflet-control.leaflet-searchbox-control-wrapper {
+  pointer-events: none;
+  margin-left: 0;
+  margin-top: 0;
 }
 .leaflet-searchbox-control {
   pointer-events: auto;
@@ -129,6 +129,14 @@ textarea::-moz-focus-inner {
     }
   }
 }
+.leaflet-searchbox-home {
+  display: inline-block;
+  width:24px;
+  height:24px;
+  vertical-align: bottom;
+  background: url("images/home_24dp@2x.png") 0 0 no-repeat;
+  background-size: 24px;
+}
 .leaflet-searchbox {
   &-result-list {
     &-item {
@@ -157,7 +165,7 @@ textarea::-moz-focus-inner {
     position: relative;
     transition-property: left;
     transition-duration: 0.5s;
-    left:-100%;
+    left: -100%;
     &-header {
       display: table;
       &-container {
@@ -195,7 +203,8 @@ textarea::-moz-focus-inner {
       font-size: 13px;
       padding-top: 10px;
       &-item {
-        .button,a{
+        .button,
+        a {
           vertical-align: middle;
         }
         padding: 10px 20px 20px 20px;
